--- a/calc_style.css
+++ b/calc_style.css
@@ -34,6 +34,7 @@ button {
     border: 1px solid #ddd;
     cursor: pointer;
     border-radius: 5px;
+    font-weight: bold;
 }
 button:hover {
     background-color: #ddd;
